new item form  added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,7 @@
         <a routerLink="/list" routerLinkActive="active" class="todo-nav-item">List</a>
         <a routerLink="/new" routerLinkActive="active" class="todo-nav-item">Add new</a>
     </nav>
-    <router-outlet></router-outlet>
+    <main class="todo-body">
+        <router-outlet></router-outlet>
+    </main>
 </section>
