--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,10 @@ html, body{
   text-decoration: line-through;
   color: dimgrey;
 }
+.todo-item.done .todo-item-status{
+  text-decoration: none;
+  color: black;
+}
 
 .todo-item-span{
   display: inline-block;
@@ -61,7 +65,11 @@ html, body{
 }
 
 .todo-item-status{
-  width: 50px;
+  margin-right: 30px;
+  width: 25px;
+  border: 1px solid darkgrey;
+  text-align: center;
+  padding: 3px;
 }
 
 .todo-nav{
@@ -86,4 +94,54 @@ html, body{
 }
 .todo-nav-item:hover{
   text-decoration: underline;
+}
+
+.todo-form-group{
+  margin-bottom: 10px;
+}
+
+.todo-input{
+  width: 100%;
+  min-height: 40px;
+  padding: 5px 10px;
+  border: 2px solid dodgerblue;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  color: black;
+  resize: vertical;
+}
+
+.todo-input-label{
+  display: block;
+  margin-bottom: 5px;
+  font-size: 14px;
+  color: dimgray;
+}
+
+.todo-button{
+  padding: 7px 30px;
+  background-color: cornflowerblue;
+  border: none;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.todo-error{
+  margin-bottom: 15px;
+  padding: 10px 20px;
+  border: 1px solid red;
+  background-color: rgba(255,0,0,0.2);
+  border-radius: 5px;
+  font-size: 14px;
+  color: red;
+}
+
+.todo-success{
+  margin-bottom: 15px;
+  padding: 10px 20px;
+  border: 1px solid green;
+  background-color: rgba(0,255,0,0.2);
+  border-radius: 5px;
+  font-size: 14px;
+  color: green;
 }
