--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,6 +1,6 @@
 <ul class="todo-list">
-    <li class="todo-item {{task.isDone ? 'done' : ''}}" *ngFor="let task of tasks">
-        <span (click)="toggleStatus(task.id)" class="todo-item-span todo-item-status">{{task.isDone ? "&#10007;" : "&nbsp;"}}</span>
+    <li class="todo-item" [ngClass]="{'done': task.isDone}" *ngFor="let task of tasks">
+        <input type="checkbox" name="todo-status" [(ngModel)]="task.isDone" class="todo-item-status">
         <a [routerLink]="['/detail', task.id]" class="todo-item-span todo-item-title">{{task.title}}</a>
         <span class="todo-item-span todo-item-text">{{task.text}}</span>
     </li>
